<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RfidinputmenuActivity">

    <TextView
        android:id="@+id/tv_rfidnum"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"
        android:text="@string/rfid_abc"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/btn_infosetting"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_edge"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/qweqwe"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <android.widget.Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_edge"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/reg"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rfid_recognize" />

    <android.widget.Button
        android:id="@+id/btn_rfid_recognize"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_round_edge"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/RfidRecognize"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rfidnum" />

    <android.widget.Button
        android:id="@+id/btn_pillsetting"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_edge"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/qweqweqwe"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_infosetting" />

</androidx.constraintlayout.widget.ConstraintLayout>
